After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 673619 - Fix some problems in the systemd code
Fix some problems in the systemd code
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: gnome-session
unspecified
Other All
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-04-06 02:03 UTC by Matthias Clasen
Modified: 2012-04-06 23:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix some problems in the systemd code (1.93 KB, patch)
2012-04-06 02:03 UTC, Matthias Clasen
accepted-commit_now Details | Review

Description Matthias Clasen 2012-04-06 02:03:24 UTC
The stop and restart functions forgot to pass the manager
object down, and then tried to emit signals on a NULL
object. Also, we were unreffing a variant that was NULL
half the time. Don't do that.

Fixes the problem where a poweroff request in the presence
of multiple user sessions leads to a PolicyKit dialog that
comes back every time it is canceled.
Comment 1 Matthias Clasen 2012-04-06 02:03:26 UTC
Created attachment 211442 [details] [review]
Fix some problems in the systemd code
Comment 2 Vincent Untz 2012-04-06 07:31:18 UTC
Comment on attachment 211442 [details] [review]
Fix some problems in the systemd code

Thanks, please commit.